# gogo-cli

./: .gitignore  README.md  disclaimer.org  pyproject.toml
.github/workflows/: pypi.yml
gogo_cli/: __main__.py
gogo_cli/core/: __gogo_cli__.py  __version__.py
gogo_cli/core/utils/: __cast__.py  __downloader__.py  __menu__.py  __player__.py
