[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gogo-cli"
version = "0.0.4"
description = "A high efficient, powerful and fast anime scraper."
authors = ["DemonKingSwarn <rockingswarn@gmail.com>"]
license = "GPLv3"
readme = "readme.txt"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "0.23.0"
catt = "0.12.11"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gogo-cli = "gogo_cli.__main__:__gogocli__"
